--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./Stylesheet.css" />
+    <link rel="stylesheet" href="./i.css" />
   </head>
   <body>
     <div class="background">
